# cmake-fmt

./: README.md
cmake-fmt/: CMakeLists.txt  main.cpp
latest-using-base/: CMakeLists.txt  main.cpp
